# apple-telemetry

./: .gitignore  Makefile  README.md  blacklist  cloaking  cloaking-rules  config.ini  generate-cloaking-rules.py  generate-ip-blacklist.py  generate.py  ip-blacklist  pyproject.toml  requirements.txt  root-domains.txt  search.sh
.github/workflows/: main.yml
utils/: lsrules.py  resolve.py
