[tool.poetry]
name = "apple-telemetry"
version = "0.1.0"
description = ""
authors = ["Connor Edwards <38229097+c-edw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiodns = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
